--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,18 +1,11 @@
+@use "assets/styles/mixins" as mixin;
+
 .headerContainer {
   background-color: var(--dark-grey);
-  height: 180px;
 }
-
-.logoContainer {
-  position: relative;
-  overflow: hidden;
-  width: 350px;
-  height: 180px;
-}
-
 .logo {
-  position: absolute;
-  top: -100px;
-  width: 350px;
-  height: 300px;
+  width: 410px;
+  @include mixin.xs {
+    width: 260px;
+  }
 }
