--- a/src/assets/styles/_bases.scss
+++ b/src/assets/styles/_bases.scss
@@ -1,18 +1,19 @@
 * {
+  margin: 0;
+  padding: 0;
   font-family: var(--font-family);
   color: var(--dark-grey);
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+  // min-height: 100vh;
+  // min-height: fill-available;
+  // min-height: -webkit-fill-available;
   background-color: var(--light-grey);
   font-size: 62.5%;
 }
-
-* {
-  box-sizing: border-box;
+html {
+  height: fill-available;
+  height: -webkit-fill-available;
 }
