--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,5 +1,6 @@
 :root {
   --font-family: "Space Grotesk", sans-serif;
+  --doc-height: 100%;
   --peps: #68b2bc;
   --mid-grey: #555555;
   --light-grey: #f5f5f5;
