--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,10 @@
+@use "assets/styles/mixins" as mixin;
+
 .footerContainer {
   background-color: var(--dark-grey);
   color: var(--light-grey);
   font-size: 0.8rem;
+  @include mixin.xs {
+    display: none;
+  }
 }
