--- a/src/pages/Homepage/Homepage.module.scss
+++ b/src/pages/Homepage/Homepage.module.scss
@@ -1,8 +1,18 @@
-.flagAnswersContent {
-  background-color: white;
-  border: 3px solid var(--peps);
-  border-radius: var(--border-radius);
-  width: 350px;
-  height: 450px;
-  overflow: hidden;
+@use "assets/styles/mixins" as mixin;
+
+.homepageContainer {
+  @include mixin.xs {
+    flex: 0 0 auto;
+  }
+  .flagAnswersContent {
+    background-color: white;
+    border: 3px solid var(--peps);
+    border-radius: var(--border-radius);
+    width: 450px;
+    overflow: hidden;
+    @include mixin.xs {
+      flex: 0 0 auto;
+      width: 300px;
+    }
+  }
 }
