--- a/src/pages/components/LoadingGame/LoadingGame.module.scss
+++ b/src/pages/components/LoadingGame/LoadingGame.module.scss
@@ -1,19 +1,24 @@
+@use "assets/styles/mixins" as mixin;
+
 .loadingGame {
+  margin: 20px;
   background-color: var(--dark-grey);
   border-radius: var(--border-radius);
-  max-width: 350px;
-  height: calc(100vh - 300px);
-  position: fixed;
-  .flagsHeartContainer {
-    height: 250px;
-    width: 250px;
-    img {
-      margin: 30px 0;
-      max-height: 250px;
-      max-width: 250px;
-      animation-name: logo;
-      animation-iteration-count: infinite;
-      animation-duration: 5s;
+  max-width: 450px;
+  @include mixin.xs {
+    max-width: 300px;
+    flex: 0 0 auto;
+  }
+  img {
+    margin: 30px 0;
+    max-width: 250px;
+    max-height: 250px;
+    animation-name: logo;
+    animation-iteration-count: infinite;
+    animation-duration: 5s;
+    @include mixin.xs {
+      max-width: 150px;
+      max-height: 150px;
     }
   }
 }
