--- a/src/assets/styles/_themes.scss
+++ b/src/assets/styles/_themes.scss
@@ -12,6 +12,23 @@
   @include mixin.xs {
     width: 260px;
     font-size: 1rem;
+    padding: 4px 3px;
+  }
+}
+
+.btn-header {
+  width: 410px;
+  cursor: pointer;
+  font-size: 1.4rem;
+  border-radius: var(--border-radius);
+  padding: 8px 12px;
+  background-color: var(--peps);
+  border: 6px solid var(--peps);
+  color: var(--dark-peps);
+  @include mixin.xs {
+    padding: 4px 3px;
+    width: 100px;
+    font-size: 0.5rem;
   }
 }
 
