--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,10 +2,17 @@
 
 .headerContainer {
   background-color: var(--dark-grey);
+  @include mixin.xs {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px 0;
+  }
 }
 .logo {
   width: 410px;
   @include mixin.xs {
-    width: 260px;
+    width: 100px;
+    margin: 10px 0;
   }
 }
