--- a/src/pages/components/Timeout/Timeout.module.scss
+++ b/src/pages/components/Timeout/Timeout.module.scss
@@ -6,9 +6,8 @@
   left: 0;
   z-index: 1;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgba(18, 18, 18, 0.9);
-  overflow-y: hidden;
 }
 
 .timeoutContent {
