--- a/src/pages/Homepage/Homepage.module.scss
+++ b/src/pages/Homepage/Homepage.module.scss
@@ -6,6 +6,7 @@
     border: 3px solid var(--peps);
     border-radius: var(--border-radius);
     width: 450px;
+    overflow: hidden;
     @include mixin.xs {
       width: 300px;
     }
