--- a/src/pages/Homepage/Homepage.module.scss
+++ b/src/pages/Homepage/Homepage.module.scss
@@ -1,14 +1,19 @@
 @use "assets/styles/mixins" as mixin;
 
 .homepageContainer {
-  .flagAnswersContent {
-    background-color: white;
-    border: 3px solid var(--peps);
-    border-radius: var(--border-radius);
+  .flagAnswersContainer {
     width: 450px;
-    overflow: hidden;
-    @include mixin.xs {
-      width: 300px;
+    height: 450px;
+    .flagAnswersContent {
+      background-color: white;
+      border: 3px solid var(--peps);
+      border-radius: var(--border-radius);
+      width: 450px;
+      height: 450px;
+      overflow: hidden;
+      @include mixin.xs {
+        width: 300px;
+      }
     }
   }
 }
