--- a/src/pages/Homepage/Homepage.module.scss
+++ b/src/pages/Homepage/Homepage.module.scss
@@ -4,6 +4,10 @@
   .flagAnswersContainer {
     width: 450px;
     height: 450px;
+    @include mixin.xs {
+      width: 300px;
+      height: 350px;
+    }
     .flagAnswersContent {
       background-color: white;
       border: 3px solid var(--peps);
@@ -13,6 +17,7 @@
       overflow: hidden;
       @include mixin.xs {
         width: 300px;
+        height: 350px;
       }
     }
   }
