--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -11,7 +11,9 @@
 .mx-30 {
   margin: 0 30px;
 }
-
+.mb-10 {
+  margin-bottom: 10px;
+}
 .mb-20 {
   margin-bottom: 20px;
 }
@@ -19,6 +21,9 @@
   margin-bottom: 30px;
 }
 
+.my-10 {
+  margin: 10px 0;
+}
 .my-20 {
   margin: 20px 0;
 }
@@ -26,6 +31,9 @@
   margin: 30px 0;
 }
 
+.py-10 {
+  padding: 10px 0;
+}
 .py-20 {
   padding: 20px 0;
 }
