--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,18 +6,21 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    padding: 10px 0;
   }
   .power {
     color: var(--peps);
     font-size: 2rem;
     cursor: pointer;
+    @include mixin.xs {
+      font-size: 1.6rem;
+    }
   }
 }
 .logo {
   width: 300px;
   @include mixin.xs {
-    width: 150px;
-    margin: 10px 0;
+    width: 180px;
+    margin: 0;
+    padding: 3px 0 1px 0;
   }
 }
